# qualified-prelude

./: .gitignore  ChangeLog.md  README.md  iridium.yaml  qualified-prelude.cabal
src-headers/qprelude/: bundle-alpha.inc  bundle-gamma.inc  default.inc  either.inc  multistate.inc
src-headers/qprelude/fully/: all.inc  bootlibs.inc
src-headers/qprelude/prelude-beta/: all.inc
src-headers/qprelude/prelude-eta/: all.inc
src-headers/qprelude/qualified-alpha/: all.inc
src-headers/qprelude/types-unqualified/: all.inc
src-test001/: Main.hs  Test001A.hs  Test001B.hs  Test001C.hs
src-testexe/: Main.hs
src/QPrelude/: Basics.hs  ErrorIf.hs
src/QualifiedPrelude/: List.hs  Partial.hs  Unqualified.hs
